syntax = "proto3";

option java_multiple_files = true;
option java_package = "tests";
option java_outer_classname = "TestsProto";
option objc_class_prefix = "TP";

package tests;

service Greeter {
  rpc EmptyArgsEmptyReturn (Empty) returns (Empty) {}
  rpc LongArgsLongReturn (Long) returns (Long) {}
  rpc MultiLongArgsLongReturn (MultiLong) returns (Long) {}
  rpc StringArgsStringReturn (StringMessage) returns (StringMessage) {}
}

message Empty {}

message MultiLong {
  Long number1 = 1;
  Long number2 = 2;
  Long number3 = 3;
  Long number4 = 4;
  Long number5 = 5;
  Long number6 = 6;
  Long number7 = 7;
  Long number8 = 8;
}

message Long {
  int64 number = 1;
}

message StringMessage {
  string message = 1;
}
